# quartr-takehome

./: .gitignore  CLAUDE.md  PROMPT_LOG.md  README.md  config.yaml  main.py  pyproject.toml
common/: http_client.py  pdf.py
example/: 10k-apple.html  edgar.http
extraction/edgar/: __init__.py  client.py  filings.py  main.py  tickers.py
files/sec-edgar/raw/: 20260715_company_tickers.json
files/sec-edgar/tickers/: 20260715_tickers.csv
tests/: test_filings.py  test_tickers.py
