[project]
name = "quartr-takehome"
version = "0.1.0"
description = "Fetch each company's latest 10-K from SEC EDGAR and save it as a PDF."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28,<0.29",
    "playwright>=1.61.0",
    "pyyaml>=6.0,<7.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
